2006-03-08  Michael Koch  <konqueror@gmx.de>

	* java/net/Proxy.java (NO_PROXY): Made final.
	(equals): Likewise.
	(hashCode): Likewise.

2006-03-07  Michael Koch  <konqueror@gmx.de>

	* gnu/java/net/DefaultProxySelector.java,
	java/net/Proxy.java, java/net/ProxySelector.java:
	New files.

2006-03-06  Mark Wielaard  <mark@klomp.org>

	* configure.ac: Set version to 0.90-generics.
	* NEWS: Fix typos.

2006-03-06  Mark Wielaard  <mark@klomp.org>

	Fixes bug #26568 reported by Paul Jenner <psj@harker.dyndns.org>
	* native/fdlibm/fdlibm.h (__ieee754_rem_pio2): Return an int32_t.
	(isnan): Define explicitly isnan if it is not a macro.

2006-03-06  Robert Schuster  <robertschuster@fsfe.org>

	* javax/swing/text/GapContent.java:
	(insertString): Throw exception when argument is below
	zero.

2006-03-06  Robert Schuster  <robertschuster@fsfe.org>

	* javax/swing/text/PlainDocument.java:
	(insertUpdate): Extended if-expression, added
	code to generate another Element when newly inserted characters
	and old ones will be on the same line.

2006-03-06  Robert Schuster  <robertschuster@fsfe.org>

	* javax/swing/text/DefaultCaret.java:
	(mouseDragged): Do selection when shift is pressed.
	(mouseClicked): Implemented.

2006-03-06  Robert Schuster  <robertschuster@fsfe.org>

	* javax/swing/text/PlainDocument.java: Fix copyright header,
	added author tags.
	(insertUpdate): Do not copy the whole document any more, added some
	more variables to prevent needless method calls.

2006-03-06  Christian Thalinger <twisti@complang.tuwien.ac.at>

	* configure.ac: Check for FREETYPE2.  This is a reverted patch and
	is required on Darwin.
	* native/jni/gtk-peer/Makefile.am (AM_LDFLAGS): Added FREETYPE2.
	(AM_CFLAGS): Likewise.

2006-03-06  Mark Wielaard  <mark@klomp.org>

	* NEWS: Add updates for 0.90 release.

2006-03-05  Mark Wielaard  <mark@klomp.org>

	* configure.ac (VERSION): Set to 0.90-pre-generics.
	* Merge with CVS trunk from classpath-0_90-branch-point.
